hphp/hack/test/typecheck/shape_idx_missing_field.php.like_types.exp
File "shape_idx_missing_field.php", line 4, characters 22-23:
Invalid argument (Typing[4110])
File "shape_idx_missing_field.php", line 4, characters 22-23:
Expected shape(?'x' => [unresolved], ...) because Shapes::idx expects a shape
File "shape_idx_missing_field.php", line 3, characters 23-32:
But got dynamic because it is an unenforceable type
